--- a/Modul_1.ipynb
+++ b/Modul_1.ipynb
@@ -34,7 +34,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -42,28 +42,169 @@
       "metadata": {
         "id": "IRS71AplIiZ7",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 121
+        },
+        "outputId": "00094ac0-b603-41e0-aab4-faf5a218c845"
       },
       "source": [
         "import os\n",
         "os.listdir('sample_data')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['README.md',\n",
+              " 'anscombe.json',\n",
+              " 'california_housing_train.csv',\n",
+              " 'mnist_test.csv',\n",
+              " 'mnist_train_small.csv',\n",
+              " 'california_housing_test.csv']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "65sgk6YdIj_Q",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 202
+        },
+        "outputId": "6500de96-862d-48b2-c132-1ae2d69ebc32"
       },
       "source": [
         "df = pd.read_csv('sample_data/california_housing_train.csv')\n",
         "df.head()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>longitude</th>\n",
+              "      <th>latitude</th>\n",
+              "      <th>housing_median_age</th>\n",
+              "      <th>total_rooms</th>\n",
+              "      <th>total_bedrooms</th>\n",
+              "      <th>population</th>\n",
+              "      <th>households</th>\n",
+              "      <th>median_income</th>\n",
+              "      <th>median_house_value</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>-114.31</td>\n",
+              "      <td>34.19</td>\n",
+              "      <td>15.0</td>\n",
+              "      <td>5612.0</td>\n",
+              "      <td>1283.0</td>\n",
+              "      <td>1015.0</td>\n",
+              "      <td>472.0</td>\n",
+              "      <td>1.4936</td>\n",
+              "      <td>66900.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>-114.47</td>\n",
+              "      <td>34.40</td>\n",
+              "      <td>19.0</td>\n",
+              "      <td>7650.0</td>\n",
+              "      <td>1901.0</td>\n",
+              "      <td>1129.0</td>\n",
+              "      <td>463.0</td>\n",
+              "      <td>1.8200</td>\n",
+              "      <td>80100.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>-114.56</td>\n",
+              "      <td>33.69</td>\n",
+              "      <td>17.0</td>\n",
+              "      <td>720.0</td>\n",
+              "      <td>174.0</td>\n",
+              "      <td>333.0</td>\n",
+              "      <td>117.0</td>\n",
+              "      <td>1.6509</td>\n",
+              "      <td>85700.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>-114.57</td>\n",
+              "      <td>33.64</td>\n",
+              "      <td>14.0</td>\n",
+              "      <td>1501.0</td>\n",
+              "      <td>337.0</td>\n",
+              "      <td>515.0</td>\n",
+              "      <td>226.0</td>\n",
+              "      <td>3.1917</td>\n",
+              "      <td>73400.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>-114.57</td>\n",
+              "      <td>33.57</td>\n",
+              "      <td>20.0</td>\n",
+              "      <td>1454.0</td>\n",
+              "      <td>326.0</td>\n",
+              "      <td>624.0</td>\n",
+              "      <td>262.0</td>\n",
+              "      <td>1.9250</td>\n",
+              "      <td>65500.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   longitude  latitude  ...  median_income  median_house_value\n",
+              "0    -114.31     34.19  ...         1.4936             66900.0\n",
+              "1    -114.47     34.40  ...         1.8200             80100.0\n",
+              "2    -114.56     33.69  ...         1.6509             85700.0\n",
+              "3    -114.57     33.64  ...         3.1917             73400.0\n",
+              "4    -114.57     33.57  ...         1.9250             65500.0\n",
+              "\n",
+              "[5 rows x 9 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -86,7 +227,7 @@
         "from sklearn.preprocessing import MinMaxScaler\n",
         "data = [[12000000, 33], [35000000, 45], [4000000, 23], [6500000, 26], [9000000, 29]]"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -94,27 +235,60 @@
       "metadata": {
         "id": "9Gs-O7YHImmO",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "99d767c6-1f3b-4673-ab0e-e5dc30a43a50"
       },
       "source": [
         "scaler = MinMaxScaler()\n",
         "scaler.fit(data)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "MinMaxScaler(copy=True, feature_range=(0, 1))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "2evNC_9PImWn",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 104
+        },
+        "outputId": "4b98851f-efd4-47de-8fcf-d5adca06e123"
       },
       "source": [
         "print(scaler.transform(data))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[0.25806452 0.45454545]\n",
+            " [1.         1.        ]\n",
+            " [0.         0.        ]\n",
+            " [0.08064516 0.13636364]\n",
+            " [0.16129032 0.27272727]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -137,7 +311,7 @@
         "from sklearn import preprocessing\n",
         "data = [[12000000, 33], [35000000, 45], [4000000, 23], [6500000, 26], [9000000, 29]]"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -150,7 +324,7 @@
       "source": [
         "scaler = preprocessing.StandardScaler().fit(data)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -163,7 +337,7 @@
       "source": [
         "data = scaler.transform(data)"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -171,13 +345,34 @@
       "metadata": {
         "id": "q4JbZb0tIwQy",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 104
+        },
+        "outputId": "c84b48d3-4272-41aa-b6a7-743db7687088"
       },
       "source": [
         "data"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[-0.11638732,  0.23521877],\n",
+              "       [ 1.94277296,  1.80334389],\n",
+              "       [-0.83261698, -1.07155217],\n",
+              "       [-0.60879521, -0.67952089],\n",
+              "       [-0.38497344, -0.28748961]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -201,7 +396,7 @@
         "from sklearn import datasets\n",
         "from sklearn.model_selection import train_test_split"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -214,7 +409,7 @@
       "source": [
         "iris = datasets.load_iris()"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -228,7 +423,7 @@
         "x=iris.data\n",
         "y=iris.data"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -241,7 +436,7 @@
       "source": [
         "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2)"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -254,7 +449,7 @@
       "source": [
         "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2)"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -282,7 +477,7 @@
         "\n",
         "iris = datasets.load_iris()"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -296,7 +491,7 @@
         "x=iris.data\n",
         "y=iris.target"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -309,7 +504,7 @@
       "source": [
         "clf = tree.DecisionTreeClassifier()"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -322,7 +517,7 @@
       "source": [
         "scores = cross_val_score(clf, x, y, cv=5)"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -330,13 +525,30 @@
       "metadata": {
         "id": "iz2Fo5TwJzIh",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "ebafe279-3dc6-48a0-c563-56ad9ecd7148"
       },
       "source": [
         "scores"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.96666667, 0.96666667, 0.9       , 1.        , 1.        ])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
     }
   ]
 }
